--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+<h1> dia a dia de um goleiro </h1>
+<p> ola me chamo bruno, sou goleiro e tenho 15 anos, atualmente moro em araucaria parana </p>
+<p> atualmente treino no csu e na escolinha furacão araucaria, e disputo campeonatos pela escolinha furacão araucaria, ja fui campeão do campeonato regional de curitiba, chamado de taça curitiba "taça curitiba", e fui campeão do campeonato interno da escolinha chamada de "champions league ", e fui vice campeão do festival socyete affa nesse fim de semana 29/07/2023, essas medalhas foi todas conquistadas no mes de julho de 2023 </p>
+e 
+    
 
+
+
+
+
+
+
+
+
+
+
+</body>
+</html>
